--- a/.github/workflows/test-and-connect-publish.yaml
+++ b/.github/workflows/test-and-connect-publish.yaml
@@ -25,10 +25,10 @@ jobs:
       #   run: |
       #     shinytest2::test_app()
           
-      - name: Create manifest.json
-        shell: Rscript {0}
-        run: |
-          rsconnect::writeManifest()
+      # - name: Create manifest.json
+      #   shell: Rscript {0}
+      #   run: |
+      #     rsconnect::writeManifest()
           
       - name: Publish Connect content
         uses: rstudio/actions/connect-publish@main
