--- a/.github/workflows/test-and-connect-publish.yaml
+++ b/.github/workflows/test-and-connect-publish.yaml
@@ -18,7 +18,7 @@ jobs:
           r-version: 4.2.3
           use-public-rspm: true
 
-      # - uses: r-lib/actions/setup-renv@v2
+      - uses: r-lib/actions/setup-renv@v2
           
       # - name: Test Shiny App
       #   shell: Rscript {0}
